solucionando el body

--- a/src/heroes/components/HeroeCard.css
+++ b/src/heroes/components/HeroeCard.css
@@ -1,5 +1,5 @@
 body {
-   background-image: url("https://scontent.cdninstagram.com/v/t1.15752-9/292550719_746582126658154_8961809866023721861_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5a057b&_nc_ohc=rSzTiDZffUgAX_WVtYQ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=03_AVJ_nRt8s1RbGjhvttCDDorzWJdwhJiFfjtyjL5l5uwt_g&oe=62F29597");
+   background-image: url("./rayo.jpg")
 }
 
 h2 {
